# Time-Series-Momentum-TSMOM-strategy-system

./: .env.example  .gitignore  README.md  docker-compose.yml  generate_thesis.py  implementation_plan.md  package-lock.json  pyproject.toml  run.py  start_backend.py  task.md
.claude/: launch.json
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.prod  main.py  requirements.txt
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/app/models/: schemas.py
backend/app/services/: engine.py
config/: __init__.py  settings.py  universes.yaml
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/backtest/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/equity-research/: page.tsx
frontend/app/live/: page.tsx
frontend/app/research/: page.tsx
frontend/components/charts/: drawdown-chart.tsx  equity-curve.tsx  exposure-chart.tsx  monthly-heatmap.tsx  plotly-chart.tsx  rolling-metrics.tsx
frontend/components/layout/: header.tsx  sidebar.tsx
frontend/components/ui/: badge.tsx  card.tsx  loading.tsx  (+2 more)
frontend/lib/: api.ts  providers.tsx  utils.ts
src/backtest/: engine.py  walk_forward.py
src/costs/: transaction_costs.py
src/dashboard/: app.py
src/data/: cleaning.py  provider.py  universe.py
src/portfolio/: constraints.py  construction.py  position_sizing.py
src/risk/: drawdown.py  metrics.py  stress.py  var.py
src/signals/: composite.py  filters.py  momentum.py  regime.py  volatility.py
src/utils/: math_helpers.py  types.py
(+10 files in other folders)
